[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "geo_trie_rs"
version = "0.1.0"
description = "Memory-mapped, fst-backed geo autocomplete index for the reviews service, exposed via PyO3."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
# Build the PyO3 extension module; the pure-Rust default build stays Python-free.
features = ["python"]
# abi3 wheel -> one wheel works across CPython >= 3.9 (README §8).
